made the about page.

--- a/index.html
+++ b/index.html
@@ -17,33 +17,32 @@
 <body class="bg-dark text-white">
 
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow-lg" 
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow-lg"
      style="background-color: rgba(0,0,0,0.85); backdrop-filter: blur(10px);">
   <div class="container">
-    <a class="navbar-brand fw-bold text-white d-flex align-items-center" href="#">
+    <a class="navbar-brand fw-bold text-white d-flex align-items-center" href="index.html">
         <img src="images/logo.png" alt="Share-Ride Logo" width="50" height="50" class="d-inline-block align-text-top me-2" style="filter: drop-shadow(0 0 5px #ff7e5f);">
         SHARE-RIDE
     </a>
-
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navMenu">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Platform</a>
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><a class="dropdown-item" href="portfolio.html">Live Map</a></li>
             <li><a class="dropdown-item" href="blog.html">AI Engine</a></li>
+            <li><a class="dropdown-item" href="album.html">Album</a></li>
             <li><a class="dropdown-item" href="faq.html">FAQ</a></li>
+            <li><a class="dropdown-item" href="team.html">Team</a></li>
           </ul>
         </li>
-
+        <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </div>
