--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@
     <p>&copy; 2026 SHARE-RIDE SaaS. All rights reserved.</p>
     <small>
       <a href="privacy.html" class="text-warning">Privacy</a> |
-      <a href="terms.html" class="text-warning">Terms</a> |
+      <a href="terms.html" class="text-warning">Terms</a> 
     </small>
   </div>
 </footer>
