fixed the pricing page cropped text by adding a padding of one (pb-1).

--- a/pricing.html
+++ b/pricing.html
@@ -47,7 +47,7 @@
 <section class="page-header text-center"
          style="background: linear-gradient(135deg, rgba(116,149,163,0.5), rgba(32,58,67,0.7), rgba(44,83,100,0.5));">
   <div class="container">
-    <h1 class="display-4 fw-bold text-gradient">Simple, Scalable Pricing</h1>
+    <h1 class="display-4 fw-bold text-gradient pb-1">Simple, Scalable Pricing</h1>
     <p class="lead text-white">Start free. Scale as your fleet grows. No hidden fees.</p>
     <div class="d-flex justify-content-center align-items-center gap-3 mt-4">
       <span class="text-white">Monthly</span>
